# EngineOne

./: CMakeLists.txt  main.py
include/: Application.hpp  Camera.hpp  Cube.hpp  Entity.hpp  Graphics.hpp  Object.hpp  RenderObjects.hpp  Shader.hpp  TestObject.hpp  Texture.hpp
include/utils/: logger.h
shaders/: crosshair_fragment.glsl  crosshair_vertex.glsl  fragment.glsl  fragment_shader.glsl  lighting.frag  lighting.vs  lighting_fragment.glsl  lighting_vertex.glsl  vertex.glsl  vertex_shader.glsl  wireframe.frag.glsl  wireframe.geom.glsl
src/: Application.cpp  Camera.cpp  Cube.cpp  Graphics.cpp  Object.cpp  RenderObjects.cpp  Shader.cpp  TestObject.cpp  Texture.cpp  main.cpp
src/utils/: logger.cpp
